<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.studentgo.ui.map.MapFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.example.studentgo.ui.leaderboard.LeaderboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.studentgo.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_popular_locations"
        android:name="com.example.studentgo.ui.popular.PopularLocationsFragment"
        android:label="Popular Locations"
        tools:layout="@layout/fragment_popular_locations">
        <action
            android:id="@+id/action_popular_to_map"
            app:destination="@id/navigation_map"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_podium"
        android:name="com.example.studentgo.ui.podium.PodiumFragment"
        android:label="Top 3"
        tools:layout="@layout/fragment_podium" />
</navigation>